--- a/hello-child/organisms/secao-estatisticas.css
+++ b/hello-child/organisms/secao-estatisticas.css
@@ -15,7 +15,6 @@
 .secao-estatisticas {
 	width: 100%;
 	max-width: 100%;
-	overflow: hidden;
 }
 
 .secao-estatisticas__inner {
