--- a/hello-child/organisms/secao-recomendacoes.css
+++ b/hello-child/organisms/secao-recomendacoes.css
@@ -14,7 +14,6 @@
 .secao-recomendacoes {
 	width: 100%;
 	max-width: 100%;
-	overflow: hidden;
 }
 
 .secao-recomendacoes__inner {
